# mk2

./: .env  .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  LICENSE  README-EN.md  README.md  main.py  pyproject.toml  test_memory_serialization.py
config/: gate.yaml  llm.yaml  memory.yaml
docs/: AGENT_REQUEST_QUICK_REFERENCE.md  AGENT_REQUEST_STRUCTURE.md  ARCHITECTURE.md  DEPLOYMENT.md  DESIGN_DECISIONS.md  GATE_COMPLETE_SPECIFICATION.md  MEMORY.md  MEMORY_REFACTOR_SUMMARY.md  MEMORY_VAULT_HYBRID_DESIGN.md  MEMORY_VAULT_REDESIGN.md  PROJECT_MODULE_DEEP_DIVE.md  README.md  REPO_AUDIT_TODO.md  ROADMAP.md  SYSTEM_REFLEX_SPECIFICATION.md  TESTING.md  demo_e2e.md  logging.md  实现总结：Core v0 → v0.1 升级（完整版）.md
examples/: memory_usage_example.py  memory_vault_hybrid_example.py
memory_vault/: metadata.json
src/: __init__.py  config_provider.py  core.py  input_bus.py  logging_config.py  nociception.py  session_router.py  session_state.py
tests/: conftest.py  test_agent_context_builder_phase1_1.py  test_agent_hybrid_planner_phase1.py  test_agent_orchestrator_mvp.py  test_agent_phase0.py  test_core_agent_e2e_live.py  test_core_memory_autoinit.py  test_core_metrics.py  test_core_no_agent_loop.py  test_core_orchestrator_injection.py  test_gate_budget_config.py  test_gate_config_hot_reload.py  test_gate_config_loading.py  test_gate_mvp.py  test_gate_policy_agent_override.py  test_gate_worker_integration.py  test_input_bus_and_adapters.py  test_llm_answerer_async.py  test_llm_providers.py  test_memory_config.py  test_memory_service_offline.py  test_nociception_v0.py  (+3 more)
(+125 files in other folders)
